--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "polished": "^4.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9",
+    "react-ga": "^3.3.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
     "styled-system": "^5.1.5",
@@ -67,6 +71,21 @@
     "@storybook/node-logger": "^6.2.2",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.2",
-    "@storybook/storybook-deployer": "^2.8.7"
+    "@storybook/storybook-deployer": "^2.8.7",
+    "@types/jest": "^25.2.1",
+    "@types/lodash.flatmap": "^4.5.6",
+    "@types/luxon": "^1.24.4",
+    "@types/multicodec": "^1.0.0",
+    "@types/node": "^13.13.5",
+    "@types/qs": "^6.9.2",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/react-redux": "^7.1.8",
+    "@types/react-router-dom": "^5.0.0",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.2",
+    "@types/rebass": "^4.0.5",
+    "@types/styled-components": "^5.1.0",
+    "ethers": "^5.0.7"
   }
 }
