--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@types/react-window": "^1.8.2",
     "@types/rebass": "^4.0.5",
     "@types/styled-components": "^5.1.0",
-    "ethers": "^5.0.7"
+    "ethers": "^5.0.7",
+    "prettier": "^2.2.1"
   }
 }
