--- a/package.json
+++ b/package.json
@@ -1,92 +1,56 @@
 {
-  "name": "@manifoldfinance/storybook",
+  "name": "manifold-storybook",
   "version": "0.1.0",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/manifoldfinance/storybook",
+  "repository": {
+    "git": "https://github.com/manifoldfinance/storybook.git"
+  },
   "private": true,
-  "dependencies": {
-    "@styled-system/prop-types": "^5.1.5",
-    "@styled-system/theme-get": "^5.1.2",
-    "@svgr/rollup": "^5.5.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "polished": "^4.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-feather": "^2.0.9",
-    "react-ga": "^3.3.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "styled-components": "^5.2.3",
-    "styled-system": "^5.1.5",
-    "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
-  },
   "scripts": {
-    "deploy:storybook": "storybook-to-ghpages",
-    "deploy:gh": "npm run deploy-storybook -- --ci --host-token-env-variable=GITHUB_TOKEN",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build:storybook": "build-storybook -s public"
+    "storybook": "start-storybook --no-manager-cache -p 6006",
+    "build-storybook": "build-storybook",
+    "lint": "npx prettier --config .prettierrc --write ."
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
+  "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.1.5",
+    "@ethersproject/providers": "^5.0.21",
+    "@uniswap/sdk": "^3.0.3",
+    "@web3-react/core": "^6.1.1",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/walletconnect-connector": "^6.1.6",
+    "ethers": "^5.0.29",
+    "polished": "^4.1.0",
+    "react": "^17.0.1",
+    "react-dom": "17.0.1"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^6.2.2",
-    "@storybook/addon-docs": "^6.2.2",
-    "@storybook/addon-essentials": "^6.2.2",
-    "@storybook/addon-links": "^6.2.2",
-    "@storybook/node-logger": "^6.2.2",
-    "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.2.2",
-    "@storybook/storybook-deployer": "^2.8.7",
-    "@types/jest": "^25.2.1",
-    "@types/lodash.flatmap": "^4.5.6",
-    "@types/luxon": "^1.24.4",
-    "@types/multicodec": "^1.0.0",
-    "@types/node": "^13.13.5",
-    "@types/qs": "^6.9.2",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@types/react-redux": "^7.1.8",
-    "@types/react-router-dom": "^5.0.0",
-    "@types/react-virtualized-auto-sizer": "^1.0.0",
-    "@types/react-window": "^1.8.2",
-    "@types/rebass": "^4.0.5",
-    "@types/styled-components": "^5.1.0",
-    "ethers": "^5.0.7",
-    "prettier": "^2.2.1"
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "@emotion/babel-plugin": "^11.1.2",
+    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@storybook/addon-actions": "^6.2.3",
+    "@storybook/addon-essentials": "^6.2.3",
+    "@storybook/addon-links": "^6.2.3",
+    "@storybook/addons": "^6.2.3",
+    "@storybook/components": "^6.2.3",
+    "@storybook/preset-typescript": "^3.0.0",
+    "@storybook/react": "^6.2.3",
+    "@storybook/theming": "^6.2.3",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "babel-loader": "^8.2.2",
+    "babel-preset-react-app": "^10.0.0",
+    "husky": "^4.3.8",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
+    "typescript": "^4.1.3"
   }
 }
