--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.6",
     "ethers": "^5.0.29",
+    "gh-pages": "^3.1.0",
     "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "17.0.1"
