--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,11 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-*.zip
-*.tar.gz
-*.tar
-.cache/
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+storybook-static/
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.AppleDouble
+.LSOverride
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Next.js
+.next
+*.local
+
+# JS
+node_modules
