--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
   },
   "private": true,
   "scripts": {
+    "build": "build-storybook",
     "storybook": "start-storybook --no-manager-cache -p 6006",
     "build-storybook": "build-storybook",
-    "lint": "npx prettier --config .prettierrc --write ."
+    "lint": "npx prettier --config .prettierrc --write .",
+    "test": "npx jest -u",
+    "deploy": "npx gh-pages -d storybook-static/ "
   },
   "dependencies": {
     "@emotion/react": "^11.1.4",
@@ -21,7 +24,6 @@
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.1.6",
     "ethers": "^5.0.29",
-    "gh-pages": "^3.1.0",
     "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "17.0.1"
@@ -40,18 +42,23 @@
     "@storybook/addon-actions": "^6.2.3",
     "@storybook/addon-essentials": "^6.2.3",
     "@storybook/addon-links": "^6.2.3",
+    "@storybook/addon-storyshots": "^6.2.3",
     "@storybook/addons": "^6.2.3",
     "@storybook/components": "^6.2.3",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.2.3",
     "@storybook/theming": "^6.2.3",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-require-context-hook": "^1.0.0",
     "babel-preset-react-app": "^10.0.0",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.1.3"
   }
 }
